logs/dag_id=forex_data_pipeline/run_id=manual__2022-11-15T204129.239248+0000/task_id=process_json_file/attempt=7.log
[2022-11-15T20:56:40.503+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: forex_data_pipeline.process_json_file manual__2022-11-15T20:41:29.239248+00:00 [queued]>
[2022-11-15T20:56:40.514+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: forex_data_pipeline.process_json_file manual__2022-11-15T20:41:29.239248+00:00 [queued]>
[2022-11-15T20:56:40.515+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2022-11-15T20:56:40.516+0000] {taskinstance.py:1363} INFO - Starting attempt 7 of 9
[2022-11-15T20:56:40.517+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2022-11-15T20:56:40.530+0000] {taskinstance.py:1383} INFO - Executing <Task(PythonOperator): process_json_file> on 2022-11-15 20:41:29.239248+00:00
[2022-11-15T20:56:40.534+0000] {standard_task_runner.py:54} INFO - Started process 3831 to run task
[2022-11-15T20:56:40.537+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'forex_data_pipeline', 'process_json_file', 'manual__2022-11-15T20:41:29.239248+00:00', '--job-id', '143', '--raw', '--subdir', 'DAGS_FOLDER/forex_data_pipeline.py', '--cfg-path', '/tmp/tmp4q6gods8']
[2022-11-15T20:56:40.538+0000] {standard_task_runner.py:83} INFO - Job 143: Subtask process_json_file
[2022-11-15T20:56:40.539+0000] {dagbag.py:525} INFO - Filling up the DagBag from /opt/***/dags/forex_data_pipeline.py
[2022-11-15T20:56:40.849+0000] {task_command.py:384} INFO - Running <TaskInstance: forex_data_pipeline.process_json_file manual__2022-11-15T20:41:29.239248+00:00 [running]> on host 9cbdb5013874
[2022-11-15T20:56:40.902+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_EMAIL=juanfelipehdezm@gmail.com
AIRFLOW_CTX_DAG_OWNER=felipehdez
AIRFLOW_CTX_DAG_ID=forex_data_pipeline
AIRFLOW_CTX_TASK_ID=process_json_file
AIRFLOW_CTX_EXECUTION_DATE=2022-11-15T20:41:29.239248+00:00
AIRFLOW_CTX_TRY_NUMBER=7
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-11-15T20:41:29.239248+00:00
[2022-11-15T20:56:40.918+0000] {base.py:71} INFO - Using connection ID 'forex_db' for task execution.
[2022-11-15T20:56:40.923+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 175, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 193, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/forex_data_pipeline.py", line 59, in processing_json_file
    postgres_sql_upload.insert_rows("forex_ratings", df_rates)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 409, in insert_rows
    cur.execute(sql, values)
psycopg2.errors.SyntaxError: INSERT has more expressions than target columns
LINE 1: ..._ratings  VALUES ('F','r','o','m','_','C','u','r','r','e','n...
                                                             ^

[2022-11-15T20:56:40.936+0000] {taskinstance.py:1406} INFO - Marking task as UP_FOR_RETRY. dag_id=forex_data_pipeline, task_id=process_json_file, execution_date=20221115T204129, start_date=20221115T205640, end_date=20221115T205640
[2022-11-15T20:56:40.948+0000] {warnings.py:110} WARNING - /home/***/.local/lib/python3.7/site-packages/***/utils/email.py:120: RemovedInAirflow3Warning: Fetching SMTP credentials from configuration variables will be deprecated in a future release. Please set credentials using a connection instead.
  send_mime_email(e_from=mail_from, e_to=recipients, mime_msg=msg, conn_id=conn_id, dryrun=dryrun)

[2022-11-15T20:56:40.949+0000] {configuration.py:569} WARNING - section/key [smtp/smtp_user] not found in config
[2022-11-15T20:56:40.949+0000] {email.py:229} INFO - Email alerting: attempt 1
[2022-11-15T20:56:40.955+0000] {configuration.py:569} WARNING - section/key [smtp/smtp_user] not found in config
[2022-11-15T20:56:40.956+0000] {email.py:229} INFO - Email alerting: attempt 1
[2022-11-15T20:56:40.957+0000] {taskinstance.py:1914} ERROR - Failed to send email to: juanfelipehdezm@gmail.com
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1457, in _run_raw_task
    self._execute_task_with_callbacks(context, test_mode)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1603, in _execute_task_with_callbacks
    result = self._execute_task(context, task_orig)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1664, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 175, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 193, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/forex_data_pipeline.py", line 59, in processing_json_file
    postgres_sql_upload.insert_rows("forex_ratings", df_rates)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 409, in insert_rows
    cur.execute(sql, values)
psycopg2.errors.SyntaxError: INSERT has more expressions than target columns
LINE 1: ..._ratings  VALUES ('F','r','o','m','_','C','u','r','r','e','n...
                                                             ^


During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 2315, in email_alert
    send_email(task.email, subject, html_content)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/email.py", line 72, in send_email
    **kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/email.py", line 120, in send_email_smtp
    send_mime_email(e_from=mail_from, e_to=recipients, mime_msg=msg, conn_id=conn_id, dryrun=dryrun)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/email.py", line 231, in send_mime_email
    smtp_conn = _get_smtp_connection(smtp_host, smtp_port, smtp_timeout, smtp_ssl)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/email.py", line 265, in _get_smtp_connection
    else smtplib.SMTP(host=host, port=port, timeout=timeout)
  File "/usr/local/lib/python3.7/smtplib.py", line 251, in __init__
    (code, msg) = self.connect(host, port)
  File "/usr/local/lib/python3.7/smtplib.py", line 336, in connect
    self.sock = self._get_socket(host, port, self.timeout)
  File "/usr/local/lib/python3.7/smtplib.py", line 307, in _get_socket
    self.source_address)
  File "/usr/local/lib/python3.7/socket.py", line 728, in create_connection
    raise err
  File "/usr/local/lib/python3.7/socket.py", line 716, in create_connection
    sock.connect(sa)
OSError: [Errno 99] Cannot assign requested address

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1912, in handle_failure
    self.email_alert(error, task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 2317, in email_alert
    send_email(task.email, subject, html_content_err)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/email.py", line 72, in send_email
    **kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/email.py", line 120, in send_email_smtp
    send_mime_email(e_from=mail_from, e_to=recipients, mime_msg=msg, conn_id=conn_id, dryrun=dryrun)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/email.py", line 231, in send_mime_email
    smtp_conn = _get_smtp_connection(smtp_host, smtp_port, smtp_timeout, smtp_ssl)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/email.py", line 265, in _get_smtp_connection
    else smtplib.SMTP(host=host, port=port, timeout=timeout)
  File "/usr/local/lib/python3.7/smtplib.py", line 251, in __init__
    (code, msg) = self.connect(host, port)
  File "/usr/local/lib/python3.7/smtplib.py", line 336, in connect
    self.sock = self._get_socket(host, port, self.timeout)
  File "/usr/local/lib/python3.7/smtplib.py", line 307, in _get_socket
    self.source_address)
  File "/usr/local/lib/python3.7/socket.py", line 728, in create_connection
    raise err
  File "/usr/local/lib/python3.7/socket.py", line 716, in create_connection
    sock.connect(sa)
OSError: [Errno 99] Cannot assign requested address
[2022-11-15T20:56:40.972+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 143 for task process_json_file (INSERT has more expressions than target columns
LINE 1: ..._ratings  VALUES ('F','r','o','m','_','C','u','r','r','e','n...
                                                             ^
; 3831)
[2022-11-15T20:56:41.031+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2022-11-15T20:56:41.047+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
